add colours for types

--- a/src/app/pokemon/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon/pokemon.component.html
@@ -1,2 +1,4 @@
-<h1 style="color: darkred">{{ pokemon.name }}</h1>
-<img src="{{ pokemonImage }}" alt="" />
+<div class="pokemon__card">
+  <h1 style="color: darkred">{{ pokemon.name }}</h1>
+  <img src="{{ pokemonImage }}" alt="" width="200px" />
+</div>
