--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,10 +1,22 @@
-$typeColours: "fire" #fddfdf, "grass" #defde0, "electric" #fcf7de,
-  "water" #def3fd, "ground" #f4e7da, "rock" #d5d5d4, "fairy" fceaff,
-  "poison" #98d7a5, "bug" #f8d5a3, "dragon" #97b3e6, "psychic" #eaeda1,
-  "flying" #f5f5f5, "fighting" #e6e0d4, "normal" #f5f5f5;
+$typeColours: (
+  "fire": #fddfdf,
+  "grass": #defde0,
+  "electric": #fcf7de,
+  "water": #def3fd,
+  "ground": #f4e7da,
+  "rock": #d5d5d4,
+  "fairy": #fceaff,
+  "poison": #98d7a5,
+  "bug": #f8d5a3,
+  "dragon": #97b3e6,
+  "psychic": #eaeda1,
+  "flying": #f5f5f5,
+  "fighting": #e6e0d4,
+  "normal": #f5f5f5,
+);
 
-@each $colour in $typeColours {
-  .type-colour--#{nth($colour, 1)} {
-    background-color: nth($colour, 2);
+@each $colour-name, $colour-value in $typeColours {
+  .type-colour--#{$colour-name} {
+    background-color: $colour-value;
   }
 }
