update card styles and add pokemon navigation buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 </header>
 
 <div class="container" role="main">
-  <div class="panel__left">
-    <router-outlet></router-outlet>
-  </div>
-  <div class="panel__right" *ngIf="showPanel">
+  <router-outlet></router-outlet>
+
+  <!-- <div class="panel__right" *ngIf="showPanel">
     <h3>Testing</h3>
     <div>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda
@@ -15,5 +14,5 @@
       dicta quis illum voluptatem impedit perspiciatis eum illo et vero autem
       obcaecati tempora doloremque?
     </div>
-  </div>
+  </div> -->
 </div>
