--- a/src/app/pokemon/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon/pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="pokemon__card">
+<div class="pokemon__card" *ngIf="pokemon">    
   <h1 style="color: darkred">{{ pokemon.name }}</h1>
   <img src="{{ pokemonImage }}" alt="" width="200px" />
 </div>
