--- a/src/app/region/region-pokemon/region-pokemon.component.scss
+++ b/src/app/region/region-pokemon/region-pokemon.component.scss
@@ -1,7 +1,6 @@
 .rg-pkmn {
   &__container {
     padding: 1rem;
-    background-color: #e09393;
     border-radius: 10px;
   }
 
@@ -17,14 +16,15 @@
     row-gap: 1.5rem;
 
     @media only screen and (min-width: 56.25rem) {
-      grid-template-columns: auto auto auto auto;
-      gap: 1rem;
+      grid-template-columns: auto auto auto;
+      gap: 2rem;
     }
   }
 
   &__card {
     display: flex;
     flex-direction: column;
+    padding: 0.5rem;
     border-radius: 5px;
     min-height: 3rem;
     min-width: 10rem;
@@ -32,5 +32,45 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
+    &-title {
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      margin: 0.25rem;
+      justify-content: space-around;
+    }
+  }
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
